--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": ">=8.0",
         "silverstripe/framework": "^5.0",
-        "silverstripe/admin": "^2.0"
-
+        "silverstripe/admin": "^2.0",
+        "goldfinch/helpers": "dev-master"
     },
     "autoload": {
         "psr-4": {
