--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=8.0",
         "silverstripe/framework": "^5.0",
         "silverstripe/admin": "^2.0",
-        "goldfinch/helpers": "dev-master"
+        "goldfinch/helpers": "dev-master",
+        "wilr/silverstripe-algolia": "^1.5"
     },
     "autoload": {
         "psr-4": {
