--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "php": ">=8.0",
         "silverstripe/framework": "^5.0",
         "silverstripe/admin": "^2.0",
-        "goldfinch/helpers": "^1.0",
-        "wilr/silverstripe-algolia": "^1.5"
+        "goldfinch/helpers": "^1.0"
     },
     "autoload": {
         "psr-4": {
